# SparkProof

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DOC_CHUNK_PROMPTS.md  EXTERNAL_SEEDS.md  MINER_GUIDE.md
scripts/: build_next_round.sh  build_triton_prompts.sh  cc_check.sh  download_registry_snapshot.sh  eval_tritonbench.sh  generate.sh  import_external_tasks.sh  install.sh  miner_run.sh  prove.sh  run_doc_qwen.sh  run_full_diverse.sh  run_pipeline.sh  run_triton_pipeline.sh  summarize_bundle.sh  verify.sh  yunwu_reasoning_probe.py  yunwu_smoke.sh
sparkproof/: __init__.py  bundle.py  bundle_summary.py  env_loader.py  gateways.py  hashing.py  manifest.py  merkle.py  openrouter_request.py  policy.py  teacher_request.py  verify.py  verify_online.py
sparkproof/blackwell/: gpu.py
sparkproof/cli/: build_prompts.py  download_registry_snapshot.py  eval_tritonbench.py  export_dpo.py  generate.py  import_external_tasks.py  prove.py  publish_dataset.py  split_dataset.py  summarize_bundle.py  triton_generate.py  verify.py  yunwu_probe.py
sparkproof/generate/: gateway_client.py  openrouter.py  runner.py
sparkproof/gpu/: __init__.py  architecture.py  attestation.py  tdx.py  token_verify.py
sparkproof/pipeline/: __init__.py  blackwell.py
sparkproof/publish/: hf_dataset.py
sparkproof/triton/: __init__.py  validator.py
sparkproof/triton_dataset/: __init__.py  adversarial_harness.py  anti_cheat.py  schema.py  (+32 more)
tests/: conftest_helpers.py  test_bundle_summary.py  test_doc_api_pages.py  test_doc_chunks.py  test_episodes.py  test_external_seeds.py  test_gateway_client.py  test_gpu_architecture.py  test_gpu_attestation.py  test_hopper_prompt_parametrization.py  test_manifest.py  test_manifest_v2.py  test_merkle.py  test_novelty.py  test_openrouter_request.py  test_policy.py  test_publish_hf_dataset.py  test_reference_bench.py  test_reference_bench_gpu.py  test_reference_kernels_gpu.py  test_registry_snapshot.py  test_release_gate.py  test_run_seed.py  test_stratified_sampling.py  test_tdx.py  test_token_verify.py  test_training_cot.py  test_triton_dataset.py  test_triton_dataset_production.py  test_triton_flywheel.py  test_verify.py  test_yunwu_gateway.py
(+4 files in other folders)
